@@ -2,6 +2,7 @@ Revision history for Datahub-Factory-VKC
 
 {{$NEXT}}
 
+    - Added: added generate_temp_tables and generate_vocabularies plugin options.
     - Changed: remove stale PID module.
     - Changed: added AAT & Creators SQLite generation to KMSKA module.
 
